--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,25 @@
-body {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  background-color: #1b1b32;
-  color: #f5f6f7;
-  font-family: Tahoma;
-  font-size: 16px;
-}
-fieldset {
-  border: none;
-  padding: 2rem 0;
+img {
+  display: block;
 }
 
-h1, p {
-  margin: 1em auto;
+body {
+  background-color: #E6E6FA;
+}
+
+#image {
+  max-width: 100%;
+  height: auto;
+  justify-content: center;
+}
+
+h1 {
   text-align: center;
 }
-textarea,#name,#email,#number,select {
-  margin: 10px 0 0 0;
-  width:100%;
-  min-height: 1.5em;
-}
-form {
-  width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-  margin: 0 auto;
-  padding-bottom: 2em;
+
+ul > li {
+  padding: 0.5rem;
 }
 
-label {
-  display: block;
-  margin: 0.5rem 0;
-}
-input[type="submit"] {
-  display: block;
-  width: 100%;
-  margin: 1em auto;
-  height: 2em;
-  font-size: 1.1rem;
-  background-color: green;
-  
-  min-width: 300px;
+#wiki {
+  text-align: center;
 }
